Refactored security in the order microservice